Html content updated
Content for github page, layout for contact page

--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<DOCTYPE !HTML>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="./common.css">
+  <link rel="stylesheet" type="text/css" href="./contact.css">
 </head>
 <body>
   <div id="topbar">
@@ -11,15 +11,12 @@
   <div id="nav">
     <a href="./index.html" id="link">Home</a>
 	<span id="spacer">|</span>
-    <a href="./github.html" id="link">Github</a>
+	<a href="./github.html" id="link">Github</a>
 	<span id="spacer">|</span>
     <a href="./media.html" id="link">Media</a>
 	<span id="spacer">|</span>
 	<a href="./contact.html" id="link">Contact</a>
   </div>
-  <div>
-    <p>Welcome to my website!<br>
-	</p>
   <div id="footer">
     <a href="https://www.instagram.com/jeffhsu42/" target="_blank"><img class="icon" src="./placeholder.png"></img></a>
     <a href="https://www.linkedin.com/in/jeffrey-hsu-54a232122/" target="_blank"><img class="icon" src="./placeholder.png"></img></a>
