--- a/media.html
+++ b/media.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="./common.css">
   <link rel="stylesheet" type="text/css" href="./media.css">
 </head>
@@ -13,7 +14,7 @@
 	<span id="spacer">|</span>
 	<a href="./github.html" id="link">Github</a>
 	<span id="spacer">|</span>
-    <a href="./page2.html" id="link">Media</a>
+    <a href="./media.html" id="link">Media</a>
 	<span id="spacer">|</span>
 	<a href="./contact.html" id="link">Contact</a>
   </div>
