--- a/github.html
+++ b/github.html
@@ -15,8 +15,6 @@
 	<a href="./github.html" id="link">Github</a>
 	<span id="spacer">|</span>
     <a href="./media.html" id="link">Media</a>
-	<span id="spacer">|</span>
-	<a href="./contact.html" id="link">Contact</a>
   </div>
   <h3>Full-fledged projects</h3>
   <div class="deck">
@@ -85,9 +83,9 @@
 	</div>
   </div>
   <div id="footer">
-    <a href="https://www.instagram.com/jeffhsu42/" target="_blank"><img class="icon" src="./placeholder.png"></img></a>
-    <a href="https://www.linkedin.com/in/jeffrey-hsu-54a232122/" target="_blank"><img class="icon" src="./placeholder.png"></img></a>
-    <a href="https://github.com/Jeff-M-Hsu" target="_blank"><img class="icon" src="./placeholder.png"></img></a>
-    <a href="mailto:jeff_m_hsu@hotmail.com" target="_blank"><img class="icon" src="./placeholder.png"></img></a>
+    <a href="https://www.instagram.com/jeffhsu42/" target="_blank"><img class="icon" src="./ig.png"></img></a>
+    <a href="https://www.linkedin.com/in/jeffrey-hsu-54a232122/" target="_blank"><img class="icon" src="./in.png"></img></a>
+    <a href="https://github.com/Jeff-M-Hsu" target="_blank"><img class="icon" src="./oc.png"></img></a>
+    <a href="mailto:jeff_m_hsu@hotmail.com" target="_blank"><img class="icon" id="em" src="./em.png"></img></a>
   </div>
 </body>
