--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="./common.css">
+  <link rel="stylesheet" type="text/css" href="./index.css">
 </head>
 <body>
   <div id="topbar">
@@ -14,16 +15,14 @@
     <a href="./github.html" id="link">Github</a>
 	<span id="spacer">|</span>
     <a href="./media.html" id="link">Media</a>
-	<span id="spacer">|</span>
-	<a href="./contact.html" id="link">Contact</a>
   </div>
   <div>
     <p>Welcome to my website!<br>
 	</p>
   <div id="footer">
-    <a href="https://www.instagram.com/jeffhsu42/" target="_blank"><img class="icon" src="./placeholder.png"></img></a>
-    <a href="https://www.linkedin.com/in/jeffrey-hsu-54a232122/" target="_blank"><img class="icon" src="./placeholder.png"></img></a>
-    <a href="https://github.com/Jeff-M-Hsu" target="_blank"><img class="icon" src="./placeholder.png"></img></a>
-    <a href="mailto:jeff_m_hsu@hotmail.com" target="_blank"><img class="icon" src="./placeholder.png"></img></a>
+    <a href="https://www.instagram.com/jeffhsu42/" target="_blank"><img class="icon" src="./ig.png"></img></a>
+    <a href="https://www.linkedin.com/in/jeffrey-hsu-54a232122/" target="_blank"><img class="icon" src="./in.png"></img></a>
+    <a href="https://github.com/Jeff-M-Hsu" target="_blank"><img class="icon" src="./oc.png"></img></a>
+    <a href="mailto:jeff_m_hsu@hotmail.com" target="_blank"><img class="icon" id="em" src="./em.png"></img></a>
   </div>
 </body>
