--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <div>
     <p>Welcome to my website!<br>
 	</p>
+  </div>
   <div id="footer">
     <a href="https://www.instagram.com/jeffhsu42/" target="_blank"><img class="icon" src="./ig.png"></img></a>
     <a href="https://www.linkedin.com/in/jeffrey-hsu-54a232122/" target="_blank"><img class="icon" src="./in.png"></img></a>
