--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <a href="./media.html" id="link">Media</a>
   </div>
   <div>
-    <p>Welcome to my website!<br>
-	</p>
+    <p>Welcome to my website!<br></p>
   </div>
   <div id="footer">
     <a href="https://www.instagram.com/jeffhsu42/" target="_blank"><img class="icon" src="./ig.png"></img></a>
