Fixed repo links
Clicking the buttons did not take the user to the specified link

--- a/github.html
+++ b/github.html
@@ -22,14 +22,14 @@
       <div class="container">
 	    <h4>JeffMHsu.com</h4>
 	    <p class="description">My personal website.</p>
-	    <button class="repo" href="https://github.com/Jeff-M-Hsu/JeffMHsu.com">Go</button>
+	    <a href="https://github.com/Jeff-M-Hsu/JeffMHsu.com" target="_blank"><button class="repo">Go</button></a>
 	  </div>
 	</div>
 	<div class="card">
       <div class="container">
 	    <h4>Bumblebee</h4>
 	    <p class="description">A discord bot that talks about bees.</p>
-	    <button class="repo" href="https://github.com/Jeff-M-Hsu/Bumblebee">Go</button>
+	    <a href="https://github.com/Jeff-M-Hsu/Bumblebee" target="_blank"><button class="repo">Go</button></a>
 	  </div>
 	</div>
   </div>
@@ -38,14 +38,14 @@
       <div class="container">
 	    <h4>JScrape</h4>
 	    <p class="description">An easy to use web scraper with a GUI.</p>
-	    <button class="repo" href="https://github.com/Jeff-M-Hsu/JScrape">Go</button>
+	    <a href="https://github.com/Jeff-M-Hsu/JScrape" target="_blank"><button class="repo">Go</button></a>
 	  </div>
 	</div>
 	<div class="card">
       <div class="container">
 	    <h4>Currency Converter</h4>
 	    <p class="description">Convert USD to up to 168 currencies including cryptocurrency both in real time and historically.</p>
-	    <button class="repo" href="https://github.com/Jeff-M-Hsu/Currency-Converter">Go</button>
+	    <a href="https://github.com/Jeff-M-Hsu/Currency-Converter" target="_blank"><button class="repo" >Go</button></a>
 	  </div>
 	</div>
   </div>
@@ -55,14 +55,14 @@
       <div class="container">
 	    <h4>CTCI Practice</h4>
 	    <p class="description">My solutions to CTCI problems.</p>
-	    <button class="repo" href="https://github.com/Jeff-M-Hsu/Cracking-the-Coding-Interview">Go</button>
+	    <a href="https://github.com/Jeff-M-Hsu/Cracking-the-Coding-Interview" target="_blank"><button class="repo" >Go</button></a>
 	  </div>
 	</div>
     <div class="card">
       <div class="container">
 	    <h4>PersonalSite</h4>
 	    <p class="description">Playing around with Angular/Node/MongoDB.</p>
-	    <button class="repo" href="https://github.com/Jeff-M-Hsu/PersonalSite">Go</button>
+	    <a href="https://github.com/Jeff-M-Hsu/PersonalSite" target="_blank"><button class="repo">Go</button></a>
 	  </div>
 	</div>
   </div>
@@ -71,14 +71,14 @@
       <div class="container">
 	    <h4>LeagueStats</h4>
 	    <p class="description">minified version of op.gg for League of Legends.</p>
-	    <button class="repo" href="https://github.com/Jeff-M-Hsu/LeagueStats">Go</button>
+	    <a href="https://github.com/Jeff-M-Hsu/LeagueStats" target="_blank"><button class="repo">Go</button></a>
 	  </div>
 	</div>
 	<div class="card">
       <div class="container">
 	    <h4>LeagueStatsGUI</h4>
 	    <p class="description">JavaFX implementation of LeagueStats.</p>
-	    <button class="repo" href="https://github.com/Jeff-M-Hsu/LeagueStatsGUI">Go</button>
+	    <a href="https://github.com/Jeff-M-Hsu/LeagueStatsGUI" target="_blank"><button class="repo">Go</button></a>
 	  </div>
 	</div>
   </div>
