Content and layout changes
changed layout of header/footer, github cards, changed media query parameters, added photos and thumbnails to media.html, renamed photos to appropriate names

--- a/github.html
+++ b/github.html
@@ -18,74 +18,66 @@
   </div>
   <h3>Full-fledged projects</h3>
   <div class="deck">
-    <div class="card">
+  	<a class = "card" href="https://github.com/Jeff-M-Hsu/JeffMHsu.com" target="_blank">
       <div class="container">
 	    <h4>JeffMHsu.com</h4>
 	    <p class="description">My personal website.</p>
-	    <a href="https://github.com/Jeff-M-Hsu/JeffMHsu.com" target="_blank"><button class="repo">Go</button></a>
 	  </div>
-	</div>
-	<div class="card">
-      <div class="container">
+	</a>
+    <a class = "card" href="https://github.com/Jeff-M-Hsu/Bumblebee" target="_blank">
+	  <div class="container">
 	    <h4>Bumblebee</h4>
 	    <p class="description">A discord bot that talks about bees.</p>
-	    <a href="https://github.com/Jeff-M-Hsu/Bumblebee" target="_blank"><button class="repo">Go</button></a>
 	  </div>
-	</div>
+	</a>
   </div>
   <div class="deck">
-    <div class="card">
-      <div class="container">
+    <a class = "card" href="https://github.com/Jeff-M-Hsu/JScrape" target="_blank">      
+	  <div class="container">
 	    <h4>JScrape</h4>
 	    <p class="description">An easy to use web scraper with a GUI.</p>
-	    <a href="https://github.com/Jeff-M-Hsu/JScrape" target="_blank"><button class="repo">Go</button></a>
 	  </div>
-	</div>
-	<div class="card">
-      <div class="container">
+	</a>
+    <a class = "card" href="https://github.com/Jeff-M-Hsu/Currency-Converter" target="_blank">      
+	  <div class="container">
 	    <h4>Currency Converter</h4>
 	    <p class="description">Convert USD to up to 168 currencies including cryptocurrency both in real time and historically.</p>
-	    <a href="https://github.com/Jeff-M-Hsu/Currency-Converter" target="_blank"><button class="repo" >Go</button></a>
 	  </div>
-	</div>
+	</a>
   </div>
   <h3>Programming Playground</h3>
   <div class="deck">
-	<div class="card">
+	<a class = "card" href="https://github.com/Jeff-M-Hsu/Cracking-the-Coding-Interview" target="_blank">
       <div class="container">
 	    <h4>CTCI Practice</h4>
 	    <p class="description">My solutions to CTCI problems.</p>
-	    <a href="https://github.com/Jeff-M-Hsu/Cracking-the-Coding-Interview" target="_blank"><button class="repo" >Go</button></a>
 	  </div>
-	</div>
-    <div class="card">
+	</a>
+    <a class = "card" href="https://github.com/Jeff-M-Hsu/PersonalSite" target="_blank">
       <div class="container">
 	    <h4>PersonalSite</h4>
 	    <p class="description">Playing around with Angular/Node/MongoDB.</p>
-	    <a href="https://github.com/Jeff-M-Hsu/PersonalSite" target="_blank"><button class="repo">Go</button></a>
 	  </div>
-	</div>
+	</a>
   </div>
   <div class="deck">
-    <div class="card">
+    <a class = "card" href="https://github.com/Jeff-M-Hsu/LeagueStats" target="_blank">
       <div class="container">
 	    <h4>LeagueStats</h4>
-	    <p class="description">minified version of op.gg for League of Legends.</p>
-	    <a href="https://github.com/Jeff-M-Hsu/LeagueStats" target="_blank"><button class="repo">Go</button></a>
+	    <p class="description">Minified version of op.gg for League of Legends.</p>
 	  </div>
-	</div>
-	<div class="card">
+	</a>
+	<a class = "card" href="https://github.com/Jeff-M-Hsu/LeagueStatsGUI" target="_blank">
       <div class="container">
 	    <h4>LeagueStatsGUI</h4>
 	    <p class="description">JavaFX implementation of LeagueStats.</p>
-	    <a href="https://github.com/Jeff-M-Hsu/LeagueStatsGUI" target="_blank"><button class="repo">Go</button></a>
 	  </div>
-	</div>
+	</a>
   </div>
   <div id="footer">
     <a href="https://www.instagram.com/jeffhsu42/" target="_blank"><img class="icon" src="./ig.png"></img></a>
     <a href="https://www.linkedin.com/in/jeffrey-hsu-54a232122/" target="_blank"><img class="icon" src="./in.png"></img></a>
     <a href="https://github.com/Jeff-M-Hsu" target="_blank"><img class="icon" src="./oc.png"></img></a>
-    <a href="mailto:jeff_m_hsu@hotmail.com" target="_blank"><img class="icon" id="em" src="./em.png"></img></a>
+    <a href="mailto:jeff_m_hsu@hotmail.com" target="_blank"><img class="icon" id="email" src="./em.png"></img></a>
   </div>
 </body>
