--- a/media.html
+++ b/media.html
@@ -16,27 +16,40 @@
 	<span id="spacer">|</span>
     <a href="./media.html" id="link">Media</a>
   </div>
+  <h3>Pictures of my travels and food</h3>
   <div id="container">
     <div>
-      <a href="./placeholder.png" target="_blank"><img class="hover" id="row1" src="./placeholder.png"></a>
-      <a href="./placeholder.png" target="_blank"><img class="hover" id="row1" src="./placeholder.png"></a>
-	  <a href="./placeholder.png" target="_blank"><img class="hover" id="row1" src="./placeholder.png"></a>
-      <a href="./placeholder.png" target="_blank"><img class="hover" id="row1" src="./placeholder.png"></a>
-      <a href="./placeholder.png" target="_blank"><img class="hover" id="row2" src="./placeholder.png"></a>
-      <a href="./placeholder.png" target="_blank"><img class="hover" id="row2" src="./placeholder.png"></a>
-      <a href="./placeholder.png" target="_blank"><img class="hover" id="row2" src="./placeholder.png"></a>
-	  <a href="./placeholder.png" target="_blank"><img class="hover" id="row2" src="./placeholder.png"></a>
-      <a href="./placeholder.png" target="_blank"><img class="hover" id="row3" src="./placeholder.png"></a>
-      <a href="./placeholder.png" target="_blank"><img class="hover" id="row3" src="./placeholder.png"></a>
-      <a href="./placeholder.png" target="_blank"><img class="hover" id="row3" src="./placeholder.png"></a>
-	  <a href="./placeholder.png" target="_blank"><img class="hover" id="row3" src="./placeholder.png"></a>
+      <a href="./resources/img/me.jpg" target="_blank"><img class="hover" id="row1" src="./resources/img/thumbnail/me.jpg"></a>
+      <a href="./resources/img/miyajima.jpg" target="_blank"><img class="hover" id="row1" src="./resources/img/thumbnail/miyajima.jpg"></a>      
+      <a href="./resources/img/wagyu_ribeye.jpg" target="_blank"><img class="hover" id="row1" src="./resources/img/thumbnail/wagyu_ribeye.jpg"></a>
+      <a href="./resources/img/rokurinsha.jpg" target="_blank"><img class="hover" id="row1" src="./resources/img/thumbnail/rokurinsha.jpg"></a>
+      <a href="./resources/img/tuna.jpg" target="_blank"><img class="hover" id="row1" src="./resources/img/thumbnail/tuna.jpg"></a>
+	  <a href="./resources/img/temple.jpg" target="_blank"><img class="hover" id="row1" src="./resources/img/thumbnail/temple.jpg"></a>
+	  <a href="./resources/img/kyoto_lunch.jpg" target="_blank"><img class="hover" id="row1" src="./resources/img/thumbnail/kyoto_lunch.jpg"></a>
+      <a href="./resources/img/kyoto.jpg" target="_blank"><img class="hover" id="row1" src="./resources/img/thumbnail/kyoto.jpg"></a>
+	  <a href="./resources/img/dream_cafe.jpg" target="_blank"><img class="hover" id="row2" src="./resources/img/thumbnail/dream_cafe.jpg"></a> 
+	  <a href="./resources/img/misen_peak.jpg" target="_blank"><img class="hover" id="row2" src="./resources/img/thumbnail/misen_peak.jpg"></a>
+	  <a href="./resources/img/misen_trail.jpg" target="_blank"><img class="hover" id="row2" src="./resources/img/thumbnail/misen_trail.jpg"></a>
+	  <a href="./resources/img/takao.jpg" target="_blank"><img class="hover" id="row2" src="./resources/img/thumbnail/takao.jpg"></a>
+	  <a href="./resources/img/takao_ride.jpg" target="_blank"><img class="hover" id="row2" src="./resources/img/thumbnail/takao_ride.jpg"></a>
+      <a href="./resources/img/nikudon.jpg" target="_blank"><img class="hover" id="row2" src="./resources/img/thumbnail/nikudon.jpg"></a>
+      <a href="./resources/img/spread.jpg" target="_blank"><img class="hover" id="row2" src="./resources/img/thumbnail/spread.jpg"></a>
+	  <a href="./resources/img/hamachi.jpg" target="_blank"><img class="hover" id="row2" src="./resources/img/thumbnail/hamachi.jpg"></a>
+      <a href="./resources/img/ankimo.jpg" target="_blank"><img class="hover" id="row3" src="./resources/img/thumbnail/ankimo.jpg"></a>
+      <a href="./resources/img/tea_sour.jpg" target="_blank"><img class="hover" id="row3" src="./resources/img/thumbnail/tea_sour.jpg"></a>
+      <a href="./resources/img/knives.jpg" target="_blank"><img class="hover" id="row3" src="./resources/img/thumbnail/knives.jpg"></a>
+      <a href="./resources/img/tomatoes.jpg" target="_blank"><img class="hover" id="row3" src="./resources/img/thumbnail/tomatoes.jpg"></a>
+	  <a href="./resources/img/strawberries.jpg" target="_blank"><img class="hover" id="row3" src="./resources/img/thumbnail/strawberries.jpg"></a>
+      <a href="./resources/img/prime_rib_don.jpg" target="_blank"><img class="hover" id="row3" src="./resources/img/thumbnail/prime_rib_don.jpg"></a>
+	  <a href="./resources/img/prime_rib.jpg" target="_blank"><img class="hover" id="row3" src="./resources/img/thumbnail/prime_rib.jpg"></a>
+      <a href="./resources/img/brunch.jpg" target="_blank"><img class="hover" id="row3" src="./resources/img/thumbnail/brunch.jpg"></a>
+      <a href="./resources/img/three_beasts.jpg" target="_blank"><img class="hover" id="row3" src="./resources/img/thumbnail/three_beasts.jpg"></a>
     </div>
   </div>
-  
   <div id="footer">
     <a href="https://www.instagram.com/jeffhsu42/" target="_blank"><img class="icon" src="./ig.png"></img></a>
     <a href="https://www.linkedin.com/in/jeffrey-hsu-54a232122/" target="_blank"><img class="icon" src="./in.png"></img></a>
     <a href="https://github.com/Jeff-M-Hsu" target="_blank"><img class="icon" src="./oc.png"></img></a>
-    <a href="mailto:jeff_m_hsu@hotmail.com" target="_blank"><img class="icon" id="em" src="./em.png"></img></a>
+    <a href="mailto:jeff_m_hsu@hotmail.com" target="_blank"><img class="icon" id="email" src="./em.png"></img></a>
   </div>
 </body>
