--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="./common.css">
-  <link rel="stylesheet" type="text/css" href="./index.css">
+  <link rel="stylesheet" type="text/css" href="./css/common.css">
+  <link rel="stylesheet" type="text/css" href="./css/index.css">
+  <link rel="shortcut icon" href="./icons/favicon.png" />
 </head>
 <body>
   <div id="topbar">
@@ -20,9 +21,9 @@
     <p>Welcome to my website!<br></p>
   </div>
   <div id="footer">
-    <a href="https://www.instagram.com/jeffhsu42/" target="_blank"><img class="icon" src="./ig.png"></img></a>
-    <a href="https://www.linkedin.com/in/jeffrey-hsu-54a232122/" target="_blank"><img class="icon" src="./in.png"></img></a>
-    <a href="https://github.com/Jeff-M-Hsu" target="_blank"><img class="icon" src="./oc.png"></img></a>
-    <a href="mailto:jeff_m_hsu@hotmail.com" target="_blank"><img class="icon" id="email" src="./em.png"></img></a>
+    <a href="https://www.instagram.com/jeffhsu42/" target="_blank"><img class="icon" src="./icons/ig.png"></img></a>
+    <a href="https://www.linkedin.com/in/jeffrey-hsu-54a232122/" target="_blank"><img class="icon" src="./icons/in.png"></img></a>
+    <a href="https://github.com/Jeff-M-Hsu" target="_blank"><img class="icon" src="./icons/oc.png"></img></a>
+    <a href="mailto:jeff_m_hsu@hotmail.com" target="_blank"><img class="icon" id="email" src="./icons/em.png"></img></a>
   </div>
 </body>
