--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="./css/common.css">
   <link rel="stylesheet" type="text/css" href="./css/index.css">
-  <link rel="shortcut icon" href="./icons/favicon.png" />
+  <link rel="shortcut icon" href="./resources/icons/favicon.png" />
 </head>
 <body>
   <div id="topbar">
@@ -21,9 +21,9 @@
     <p>Welcome to my website!<br></p>
   </div>
   <div id="footer">
-    <a href="https://www.instagram.com/jeffhsu42/" target="_blank"><img class="icon" src="./icons/ig.png"></img></a>
-    <a href="https://www.linkedin.com/in/jeffrey-hsu-54a232122/" target="_blank"><img class="icon" src="./icons/in.png"></img></a>
-    <a href="https://github.com/Jeff-M-Hsu" target="_blank"><img class="icon" src="./icons/oc.png"></img></a>
-    <a href="mailto:jeff_m_hsu@hotmail.com" target="_blank"><img class="icon" id="email" src="./icons/em.png"></img></a>
+    <a href="https://www.instagram.com/jeffhsu42/" target="_blank"><img class="icon" src="./resources/icons/ig.png"></img></a>
+    <a href="https://www.linkedin.com/in/jeffrey-hsu-54a232122/" target="_blank"><img class="icon" src="./resources/icons/in.png"></img></a>
+    <a href="https://github.com/Jeff-M-Hsu" target="_blank"><img class="icon" src="./resources/icons/oc.png"></img></a>
+    <a href="mailto:jeff_m_hsu@hotmail.com" target="_blank"><img class="icon" id="email" src="./resources/icons/em.png"></img></a>
   </div>
 </body>
