Home page content and css responsiveness improvements

--- a/github.html
+++ b/github.html
@@ -12,23 +12,27 @@
   </div>
   <div id="nav">
     <a href="./index.html" id="link">Home</a>
-	<span id="spacer">|</span>
-	<a href="./github.html" id="link">Github</a>
-	<span id="spacer">|</span>
-    <a href="./media.html" id="link">Media</a>
+	<a href="./github.html" id="link" class="spaced-link">Github</a>
+    <a href="./media.html" id="link" class="spaced-link">Media</a>
   </div>
-  <h3>Full-fledged projects</h3>
+  <h3>Projects</h3>
   <div class="deck">
   	<a class = "card" href="https://github.com/Jeff-M-Hsu/JeffMHsu.com" target="_blank">
       <div class="container">
 	    <h4>JeffMHsu.com</h4>
-	    <p class="description">My personal website.</p>
+	    <p class="description">
+		  My personal website.<br><br>
+		  HTML | CSS
+		</p>
 	  </div>
 	</a>
     <a class = "card" href="https://github.com/Jeff-M-Hsu/Bumblebee" target="_blank">
 	  <div class="container">
 	    <h4>Bumblebee</h4>
-	    <p class="description">A discord bot that talks about bees.</p>
+	    <p class="description">
+		  A discord bot that talks about bees. Delivers bee jokes, facts, memes, and more.<br><br>
+		  Node.js | Discord.io | JScrape
+		</p>
 	  </div>
 	</a>
   </div>
@@ -36,17 +40,23 @@
     <a class = "card" href="https://github.com/Jeff-M-Hsu/JScrape" target="_blank">      
 	  <div class="container">
 	    <h4>JScrape</h4>
-	    <p class="description">An easy to use web scraper with a GUI.</p>
+	    <p class="description">
+		  An easy to use web scraper with a GUI.<br><br>
+		  Java | HtmlUnit | Java Swing
+		</p>
 	  </div>
 	</a>
     <a class = "card" href="https://github.com/Jeff-M-Hsu/Currency-Converter" target="_blank">      
 	  <div class="container">
 	    <h4>Currency Converter</h4>
-	    <p class="description">Convert USD to up to 168 currencies including cryptocurrency both in real time and historically.</p>
+	    <p class="description">
+		  Convert USD to up to 168 currencies including cryptocurrency in real time and historically.<br><br>
+		  Java | HttpClient | Java Swing
+		</p>
 	  </div>
 	</a>
   </div>
-  <h3>Programming Playground</h3>
+  <h3>Playground</h3>
   <div class="deck">
 	<a class = "card" href="https://github.com/Jeff-M-Hsu/Cracking-the-Coding-Interview" target="_blank">
       <div class="container">
