--- a/index.html
+++ b/index.html
@@ -12,13 +12,42 @@
   </div>
   <div id="nav">
     <a href="./index.html" id="link">Home</a>
-	<span id="spacer">|</span>
-    <a href="./github.html" id="link">Github</a>
-	<span id="spacer">|</span>
-    <a href="./media.html" id="link">Media</a>
+    <a href="./github.html" id="link" class="spaced-link">Github</a>
+    <a href="./media.html" id="link" class="spaced-link">Media</a>
   </div>
-  <div>
-    <p>Welcome to my website!<br></p>
+  <div id="main">
+    <div>
+      <p>Welcome to my website!</p>
+      <p>
+        My name is Jeffrey Hsu. I am a 23 year old full stack developer who graduated from the University of Western Ontario
+	    in 2018 with a Bachelor of Science: <i>Specialization in Computer Science</i>. I originally chose to enter this field
+	    because my favorite thing to do was play video games. The difficulty, the mental interactivity, and feeling of 
+	    accomplishment when overcoming adversity made me realize that the two weren't so far apart and that becoming a developer could 
+	    be just what I need to progress in life. As someone whose life has been largely influenced by the choices of those around me, this 
+	    is one of the first that I have made by myself. I am still at the beginning of my career but I know that this is the right 
+	    path for me!
+	  </p>
+	  <p>
+	    Aside from programming, my previous years have led me to take on a few hobbies that I didn't expect to enjoy as much as I do.
+	    The first is cooking. I grew up watching cooking shows instead of cartoons. Every morning before elementary school was Michael Smith's 
+	    Chef at Home instead of Spongebob Squarepants, and as I grew older it transitioned into Anthony Bourdain's No Reservations and 
+	    Mind of a Chef instead of The Simpsons and Family Guy. Speaking of choices, my eldest brother chose to become a chef; brothers being 
+	    brothers, I was essentially forced to watch cooking shows instead of cartoons. This however led me to become interested in what things tasted like 
+	    and it taught me how to cook. All the techniques and knowledge of flavor profiles I picked up along the way has turned me into one of the best cooks 
+	    I know, even my brother has acknowledged my particular ability to cook all sorts of meats to perfection and he works as the "big man on the grill" at 
+	    a steakhouse. 
+	  </p>
+	  <p>
+	    Another hobby I didn't know I would become obssessed with is lifting weights. In high school I weighed close to 130 pounds at a height of 6'1", yet 
+	    still managed to have a gut because all I did was play video games from 4pm to midnight. I was tired all the time, and could barely participate in P.E. classes. 
+	    Embarrassingly, I couldn't even do a single sit up or push up even if I had assistance! The last straw was in senior year of high school when we were just about to graduate; 
+	    a lot of the other guys were quite fit and always talking about muscles and lifting big numbers while I still considered an 8 pound dumbbell to be heavy. On the final week 
+	    before graduation, I set my mind on going from a gut to having a six pack before the end of summer. Amazingly, I managed to pull it off! Going into first year of university 
+	    I started to slack again from being out on my own for the first time, but I got myself together by the second year and I'm now at the point where I don't feel right if I miss 
+	    a day at the gym. Now I weigh 175 pounds with a lower body fat percentage than I did at 130 pounds, and can bench 180, squat 235, deadlift 330, and press 120, which is a far 
+	    cry from where I started.
+	  </p>
+	</div>
   </div>
   <div id="footer">
     <a href="https://www.instagram.com/jeffhsu42/" target="_blank"><img class="icon" src="./resources/icons/ig.png"></img></a>
