--- a/media.html
+++ b/media.html
@@ -12,12 +12,10 @@
   </div>
   <div id="nav">
     <a href="./index.html" id="link">Home</a>
-	<span id="spacer">|</span>
-	<a href="./github.html" id="link">Github</a>
-	<span id="spacer">|</span>
-    <a href="./media.html" id="link">Media</a>
+	<a href="./github.html" id="link" class="spaced-link">Github</a>
+    <a href="./media.html" id="link" class="spaced-link">Media</a>
   </div>
-  <h3>Pictures of my travels and food</h3>
+  <h3>My Travels and My Food</h3>
   <div id="container">
     <div>
       <a href="./resources/img/me.jpg" target="_blank"><img class="hover" id="row1" src="./resources/img/thumbnail/me.jpg"></a>
