Added pages with detailed content for each project

--- a/index.html
+++ b/index.html
@@ -10,28 +10,35 @@
 <body>
   <div id="topbar">
     <a href="/" id="title">Jeffrey Hsu</a>
-  </div>
+	<div id="social-media">
+      <a href="https://www.instagram.com/jeffhsu42/" target="_blank"><img class="icon" src="./resources/icons/ig.png"></img></a>
+      <a href="https://www.linkedin.com/in/jeffrey-hsu-54a232122/" target="_blank"><img class="icon" src="./resources/icons/in.png"></img></a>
+      <a href="https://github.com/Jeff-M-Hsu" target="_blank"><img class="icon" src="./resources/icons/oc.png"></img></a>
+      <a href="mailto:jeff_m_hsu@hotmail.com" target="_blank"><img class="icon" id="email" src="./resources/icons/em.png"></img></a>
+    </div>
   </div>
   <div id="main">
-    <div style="margin-left: 10%;">
-      <h1 class="intro">My name is Jeffrey, and my passion is full stack web development.</h1>
-	  <h2 class="intro" style="padding-bottom: 5vh;">I build websites with responsive designs and custom APIs.</h2>
-	  <a href="https://drive.google.com/open?id=1B5E-jVxl2XawyNYB3Pppv1n6OyR1fYFM" target="_blank"><span id="resume">My resume</span></a>
+    <div id="landing">
+      <div>
+        <h1 class="intro">My name is Jeffrey, and my passion is full stack web development.</h1>
+	    <h2 class="intro" style="padding-bottom: 5vh;">I build websites with responsive designs and custom APIs.</h2>
+	    <a href="https://drive.google.com/open?id=1B5E-jVxl2XawyNYB3Pppv1n6OyR1fYFM" target="_blank"><span id="resume">My resume</span></a>
+	  </div>
 	</div>
     <div class="deck">
-      <a class = "card" href="https://github.com/Jeff-M-Hsu/JeffMHsu.com" target="_blank">    
-	  <img class="hover" id="row1" src="./resources/img/thumbnail/me.jpg">	
-	  <div class="container">
-	    <h4>JeffMHsu.com</h4>
-	    <p class="description">
-		  Personal website to showcase my work. You're on it right now!
-		</p>
-	  </div>
-	  <p class="tags">
-	    <br>HTML | CSS | AWS S3
-      </p>
+      <a class = "card" href="./jeffmhsu.com.html" target="_blank">    
+	    <img class="hover" id="row1" src="./resources/img/thumbnail/me.jpg">	
+	    <div class="container">
+	      <h4>JeffMHsu.com</h4>
+	      <p class="description">
+		    Personal website to showcase my work. You're on it right now!
+		  </p>
+	    </div>
+	    <p class="tags">
+	      HTML | CSS | AWS S3
+        </p>
 	  </a>
-      <a class = "card" href="http://tinyurl.com/honeycombguild" target="_blank">    
+      <a class = "card" href="./honeycombguild.html" target="_blank">    
 	    <img class="hover" id="row1" src="./resources/img/thumbnail/me.jpg">	
 	    <div class="container">
 	      <h4>HoneyComb Guild</h4>
@@ -45,7 +52,7 @@
 	  </a>
     </div>
     <div class="deck">
-      <a class = "card" href="https://github.com/Jeff-M-Hsu/Bumblebee" target="_blank">
+      <a class = "card" href="./bumblebee.html" target="_blank">
   	    <img class="hover" id="row1" src="./resources/img/thumbnail/me.jpg">
 	    <div class="container">
 	      <h4>Bumblebee</h4>
@@ -57,7 +64,7 @@
 		  Node.js | Discord.io | JScrape
         </p>
 	  </a>
-      <a class = "card" href="https://github.com/Jeff-M-Hsu/JScrape" target="_blank">   
+      <a class = "card" href="./jscrape.html" target="_blank">   
 	    <img class="hover" id="row1" src="./resources/img/thumbnail/me.jpg">	
 	    <div class="container">
 	      <h4>JScrape</h4>
@@ -71,7 +78,7 @@
 	  </a>
     </div>
     <div class="deck">
-      <a class = "card" href="https://github.com/Jeff-M-Hsu/Currency-Converter" target="_blank">   
+      <a class = "card" href="./currencyconverter.html" target="_blank">   
 	    <img class="hover" id="row1" src="./resources/img/thumbnail/me.jpg">	
 	    <div class="container">
 	      <h4>Currency Converter</h4>
@@ -92,11 +99,6 @@
 	    </div>
 	  </a>
     </div>
-  </div>
-  <div id="footer">
-    <a href="https://www.instagram.com/jeffhsu42/" target="_blank"><img class="icon" src="./resources/icons/ig.png"></img></a>
-    <a href="https://www.linkedin.com/in/jeffrey-hsu-54a232122/" target="_blank"><img class="icon" src="./resources/icons/in.png"></img></a>
-    <a href="https://github.com/Jeff-M-Hsu" target="_blank"><img class="icon" src="./resources/icons/oc.png"></img></a>
-    <a href="mailto:jeff_m_hsu@hotmail.com" target="_blank"><img class="icon" id="email" src="./resources/icons/em.png"></img></a>
+	<div class="row-space"></div>
   </div>
 </body>
