--- a/page-template.html
+++ b/page-template.html
@@ -3,7 +3,6 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="./css/common.css">
-  <link rel="stylesheet" type="text/css" href="./css/index.css">
   <link rel="stylesheet" type="text/css" href="./css/github.css">
   <link rel="shortcut icon" href="./resources/icons/favicon.png"/>
   <title>Jeffrey Hsu</title>
@@ -11,7 +10,12 @@
 <body>
   <div id="topbar">
     <a href="/" id="title">Jeffrey Hsu</a>
-  </div>
+	<div id="social-media">
+      <a href="https://www.instagram.com/jeffhsu42/" target="_blank"><img class="icon" src="./resources/icons/ig.png"></img></a>
+      <a href="https://www.linkedin.com/in/jeffrey-hsu-54a232122/" target="_blank"><img class="icon" src="./resources/icons/in.png"></img></a>
+      <a href="https://github.com/Jeff-M-Hsu" target="_blank"><img class="icon" src="./resources/icons/oc.png"></img></a>
+      <a href="mailto:jeff_m_hsu@hotmail.com" target="_blank"><img class="icon" id="email" src="./resources/icons/em.png"></img></a>
+    </div>
   </div>
   <div id="main">
   	<h1 id="projectname">Project Name</h1>
@@ -24,6 +28,7 @@
 	    <p class="meta">
 		Date: 2019<br><br>
 		Contributor: Jeffrey Hsu<br><br>
+		Purpose: Personal Project<br><br>
 		Stack: React | Express | Node.js | MongoDB | AWS S3/EC2
 		</p>
 	  </div>
@@ -52,13 +57,7 @@
 	<div class="row-space"></div>
 	<div class="row-space"></div>
 	<div class="row">
-	  <a href="/"><h2 id="back-button">Return</h2></a>
+	  <a id="back-button" href="/"><h2 >Return</h2></a>
 	</div>
-  </div>
-  <div id="footer">
-    <a href="https://www.instagram.com/jeffhsu42/" target="_blank"><img class="icon" src="./resources/icons/ig.png"></img></a>
-    <a href="https://www.linkedin.com/in/jeffrey-hsu-54a232122/" target="_blank"><img class="icon" src="./resources/icons/in.png"></img></a>
-    <a href="https://github.com/Jeff-M-Hsu" target="_blank"><img class="icon" src="./resources/icons/oc.png"></img></a>
-    <a href="mailto:jeff_m_hsu@hotmail.com" target="_blank"><img class="icon" id="email" src="./resources/icons/em.png"></img></a>
   </div>
 </body>
