Removed unnecessary html tags

--- a/honeycombguild.html
+++ b/honeycombguild.html
@@ -20,7 +20,7 @@
   <div id="main">
   	<h1 id="projectname">HoneyComb Guild</h1>
     <div class="row">
-	  <img style="width: 30%; height: auto;" class="hover" id="row1" src="./resources/img/thumbnail/me.jpg">
+	  <img style="width: 30%; height: auto;" class="cover" src="./resources/img/honeycomb.png">
 	</div>
 	<div class="row-space"></div>
 	<div class="row">
@@ -36,7 +36,8 @@
 	    <p>
 		A gaming community named HoneyComb commissioned me to build a website for them to 
 		recruit new members with. It was designed in collaboration with the community leader and 
-		has a responsive layout that tranforms to support mobile and desktop resolutions. 
+		has a responsive layout that tranforms to support mobile, tablet, 2K/4K displays on top of 
+		the typical laptop/desktop resolutions. 
 		</p>
 		<p>
 		They also requested the ability to display bee jokes and facts on the website through an interactive medium. 
