--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</div>
     <div class="deck">
       <a class = "card" href="./jeffmhsu.com.html" target="_blank">    
-	    <img class="hover" id="row1" src="./resources/img/thumbnail/me.jpg">	
+	    <img class="cover" src="./resources/img/jeffmhsu.png">	
 	    <div class="container">
 	      <h4>JeffMHsu.com</h4>
 	      <p class="description">
@@ -39,7 +39,7 @@
         </p>
 	  </a>
       <a class = "card" href="./honeycombguild.html" target="_blank">    
-	    <img class="hover" id="row1" src="./resources/img/thumbnail/me.jpg">	
+	    <img class="cover" src="./resources/img/honeycomb.png">	
 	    <div class="container">
 	      <h4>HoneyComb Guild</h4>
 	      <p class="description">
@@ -53,7 +53,7 @@
     </div>
     <div class="deck">
       <a class = "card" href="./bumblebee.html" target="_blank">
-  	    <img class="hover" id="row1" src="./resources/img/thumbnail/me.jpg">
+  	    <img class="cover" src="./resources/img/bumblebee.png">
 	    <div class="container">
 	      <h4>Bumblebee</h4>
 	      <p class="description">
@@ -65,7 +65,7 @@
         </p>
 	  </a>
       <a class = "card" href="./jscrape.html" target="_blank">   
-	    <img class="hover" id="row1" src="./resources/img/thumbnail/me.jpg">	
+	    <img class="cover" src="./resources/img/jscrape.png">	
 	    <div class="container">
 	      <h4>JScrape</h4>
 	      <p class="description">
@@ -79,7 +79,7 @@
     </div>
     <div class="deck">
       <a class = "card" href="./currencyconverter.html" target="_blank">   
-	    <img class="hover" id="row1" src="./resources/img/thumbnail/me.jpg">	
+	    <img class="cover" src="./resources/img/currencyconverter.png">	
 	    <div class="container">
 	      <h4>Currency Converter</h4>
 	      <p class="description">
@@ -90,9 +90,9 @@
 		  Java | HttpClient | Java Swing
         </p>
 	  </a>
-	  <a class = "card" target="_blank">      
-	    <img class="hover" id="row1" src="./resources/img/thumbnail/me.jpg">
-	    <div class="container">
+	  <a class = "card" target="_blank" style="border: none;">      
+	    <img class="cover" style="display: none;">
+	    <div class="container" style="display: none;">
 	      <h4>Coming Soon...</h4>
 	      <p class="description">
 		  </p>
