--- a/jeffmhsu.com.html
+++ b/jeffmhsu.com.html
@@ -20,7 +20,7 @@
   <div id="main">
   	<h1 id="projectname">JeffMHsu.com</h1>
     <div class="row">
-	  <img style="width: 30%; height: auto;" class="hover" id="row1" src="./resources/img/thumbnail/me.jpg">
+	  <img style="width: 30%; height: auto;" class="cover" src="./resources/img/jeffmhsu.png">
 	</div>
 	<div class="row-space"></div>
 	<div class="row">
@@ -38,7 +38,7 @@
 		as a way to increase my online presence and have a personalized, visually 
 		comprehensive source to display my work. The design is modern, clean, professional, 
 		and has a responsive layout that transforms to support phones, tablets, 
-		as well as 2K and 4K displays on top of the usual laptop/desktop resolutions.
+		as well as 2K and 4K displays on top of the typical laptop/desktop resolutions.
 		</p>
 		<p>
 		This website is a constant work in progress as I accumulate more works 
