--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		  </p>
 	    </div>
 	    <p class="tags">
-	      HTML | CSS | AWS S3
+	      HTML | CSS | AWS S3/Route 53
         </p>
 	  </a>
       <a class = "card" href="./honeycombguild.html" target="_blank">    
