--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	  </div>
 	</div>
     <div class="deck">
-      <a class = "card" href="./jeffmhsu.com.html" target="_blank">    
+      <a class = "card" href="./jeffmhsu.com.html">    
 	    <img class="cover" src="./resources/img/jeffmhsu.png">	
 	    <div class="container">
 	      <h4>JeffMHsu.com</h4>
@@ -38,7 +38,7 @@
 	      HTML | CSS | AWS S3/Route 53
         </p>
 	  </a>
-      <a class = "card" href="./honeycombguild.html" target="_blank">    
+      <a class = "card" href="./honeycombguild.html">    
 	    <img class="cover" src="./resources/img/honeycomb.png">	
 	    <div class="container">
 	      <h4>HoneyComb Guild</h4>
@@ -52,7 +52,7 @@
 	  </a>
     </div>
     <div class="deck">
-      <a class = "card" href="./bumblebee.html" target="_blank">
+      <a class = "card" href="./bumblebee.html">
   	    <img class="cover" src="./resources/img/bumblebee.png">
 	    <div class="container">
 	      <h4>Bumblebee</h4>
@@ -64,7 +64,7 @@
 		  Node.js | Discord.io | JScrape
         </p>
 	  </a>
-      <a class = "card" href="./jscrape.html" target="_blank">   
+      <a class = "card" href="./jscrape.html">   
 	    <img class="cover" src="./resources/img/jscrape.png">	
 	    <div class="container">
 	      <h4>JScrape</h4>
@@ -78,7 +78,7 @@
 	  </a>
     </div>
     <div class="deck">
-      <a class = "card" href="./currencyconverter.html" target="_blank">   
+      <a class = "card" href="./currencyconverter.html">   
 	    <img class="cover" src="./resources/img/currencyconverter.png">	
 	    <div class="container">
 	      <h4>Currency Converter</h4>
@@ -90,7 +90,7 @@
 		  Java | HttpClient | Java Swing
         </p>
 	  </a>
-	  <a class = "card" target="_blank" style="border: none;">      
+	  <a class = "card" style="border: none;">      
 	    <img class="cover" style="display: none;">
 	    <div class="container" style="display: none;">
 	      <h4>Coming Soon...</h4>
