Added responsive layouts to project pages
Fixed some minor errors in css and page content to

--- a/currencyconverter.html
+++ b/currencyconverter.html
@@ -20,7 +20,7 @@
   <div id="main">
   	<h1 id="projectname">Currency Converter</h1>
     <div class="row">
-	  <img style="width: 30%; height: auto;" class="cover" src="./resources/img/currencyconverter.png">
+	  <img class="cover" src="./resources/img/currencyconverter.png">
 	</div>
 	<div class="row-space"></div>
 	<div class="row">
