--- a/jscrape.html
+++ b/jscrape.html
@@ -18,9 +18,9 @@
     </div>
   </div>
   <div id="main">
-  	<h1 id="projectname">Project Name</h1>
+  	<h1 id="projectname">JScrape</h1>
     <div class="row">
-	  <img style="width: 30%; height: auto;" class="cover" src="./resources/img/jscrape.png">
+	  <img class="cover" src="./resources/img/jscrape.png">
 	</div>
 	<div class="row-space"></div>
 	<div class="row">
