--- a/honeycombguild.html
+++ b/honeycombguild.html
@@ -20,7 +20,7 @@
   <div id="main">
   	<h1 id="projectname">HoneyComb Guild</h1>
     <div class="row">
-	  <img style="width: 30%; height: auto;" class="cover" src="./resources/img/honeycomb.png">
+	  <img class="cover" src="./resources/img/honeycomb.png">
 	</div>
 	<div class="row-space"></div>
 	<div class="row">
