--- a/jeffmhsu.com.html
+++ b/jeffmhsu.com.html
@@ -20,7 +20,7 @@
   <div id="main">
   	<h1 id="projectname">JeffMHsu.com</h1>
     <div class="row">
-	  <img style="width: 30%; height: auto;" class="cover" src="./resources/img/jeffmhsu.png">
+	  <img class="cover" src="./resources/img/jeffmhsu.png">
 	</div>
 	<div class="row-space"></div>
 	<div class="row">
