--- a/page-template.html
+++ b/page-template.html
@@ -20,7 +20,7 @@
   <div id="main">
   	<h1 id="projectname">Project Name</h1>
     <div class="row">
-	  <img style="width: 30%; height: auto;" class="hover" id="row1" src="./resources/img/thumbnail/me.jpg">
+	  <img class="hover" id="row1" src="./resources/img/thumbnail/me.jpg">
 	</div>
 	<div class="row-space"></div>
 	<div class="row">
