--- a/jscrape.html
+++ b/jscrape.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="./css/common.css">
   <link rel="stylesheet" type="text/css" href="./css/github.css">
   <link rel="shortcut icon" href="./resources/icons/favicon.png"/>
-  <title>Jeffrey Hsu</title>
+  <title>Jeffrey Hsu - JScrape</title>
 </head>
 <body>
   <div id="topbar">
