--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 	  </div>
 	</div>
     <div class="deck">
-      <a class = "card" href="./jeffmhsu.com.html">    
-	    <img class="cover" src="./resources/img/jeffmhsu.png">	
+      <a class = "card" href="./jeffmhsu.com">    
+	    <img style="width: 100%; height: auto;" src="./resources/img/jeffmhsu.png">	
 	    <div class="container">
 	      <h4>JeffMHsu.com</h4>
 	      <p class="description">
@@ -38,8 +38,8 @@
 	      HTML | CSS | AWS S3/Route 53
         </p>
 	  </a>
-      <a class = "card" href="./honeycombguild.html">    
-	    <img class="cover" src="./resources/img/honeycomb.png">	
+      <a class = "card" href="./honeycombguild">    
+	    <img style="width: 100%; height: auto;" src="./resources/img/honeycomb.png">	
 	    <div class="container">
 	      <h4>HoneyComb Guild</h4>
 	      <p class="description">
@@ -52,8 +52,8 @@
 	  </a>
     </div>
     <div class="deck">
-      <a class = "card" href="./bumblebee.html">
-  	    <img class="cover" src="./resources/img/bumblebee.png">
+      <a class = "card" href="./bumblebee">
+  	    <img style="width: 100%; height: auto;" src="./resources/img/bumblebee.png">
 	    <div class="container">
 	      <h4>Bumblebee</h4>
 	      <p class="description">
@@ -64,8 +64,8 @@
 		  Node.js | Discord.io | JScrape
         </p>
 	  </a>
-      <a class = "card" href="./jscrape.html">   
-	    <img class="cover" src="./resources/img/jscrape.png">	
+      <a class = "card" href="./jscrape">   
+	    <img style="width: 100%; height: auto;" src="./resources/img/jscrape.png">	
 	    <div class="container">
 	      <h4>JScrape</h4>
 	      <p class="description">
@@ -78,8 +78,8 @@
 	  </a>
     </div>
     <div class="deck">
-      <a class = "card" href="./currencyconverter.html">   
-	    <img class="cover" src="./resources/img/currencyconverter.png">	
+      <a class = "card" href="./currencyconverter">   
+	    <img style="width: 100%; height: auto;" src="./resources/img/currencyconverter.png">	
 	    <div class="container">
 	      <h4>Currency Converter</h4>
 	      <p class="description">
@@ -91,7 +91,7 @@
         </p>
 	  </a>
 	  <a class = "card" style="border: none;">      
-	    <img class="cover" style="display: none;">
+	    <img style="width: 100%; height: auto;" style="display: none;">
 	    <div class="container" style="display: none;">
 	      <h4>Coming Soon...</h4>
 	      <p class="description">
