Fixed unintended css styling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</div>
     <div class="deck">
       <a class = "card" href="./jeffmhsu.com.html">    
-	    <img class="cover" src="./resources/img/jeffmhsu.png">	
+	    <img style="width: 100%; height: auto;" src="./resources/img/jeffmhsu.png">	
 	    <div class="container">
 	      <h4>JeffMHsu.com</h4>
 	      <p class="description">
@@ -39,7 +39,7 @@
         </p>
 	  </a>
       <a class = "card" href="./honeycombguild.html">    
-	    <img class="cover" src="./resources/img/honeycomb.png">	
+	    <img style="width: 100%; height: auto;" src="./resources/img/honeycomb.png">	
 	    <div class="container">
 	      <h4>HoneyComb Guild</h4>
 	      <p class="description">
@@ -53,7 +53,7 @@
     </div>
     <div class="deck">
       <a class = "card" href="./bumblebee.html">
-  	    <img class="cover" src="./resources/img/bumblebee.png">
+  	    <img style="width: 100%; height: auto;" src="./resources/img/bumblebee.png">
 	    <div class="container">
 	      <h4>Bumblebee</h4>
 	      <p class="description">
@@ -65,7 +65,7 @@
         </p>
 	  </a>
       <a class = "card" href="./jscrape.html">   
-	    <img class="cover" src="./resources/img/jscrape.png">	
+	    <img style="width: 100%; height: auto;" src="./resources/img/jscrape.png">	
 	    <div class="container">
 	      <h4>JScrape</h4>
 	      <p class="description">
@@ -79,7 +79,7 @@
     </div>
     <div class="deck">
       <a class = "card" href="./currencyconverter.html">   
-	    <img class="cover" src="./resources/img/currencyconverter.png">	
+	    <img style="width: 100%; height: auto;" src="./resources/img/currencyconverter.png">	
 	    <div class="container">
 	      <h4>Currency Converter</h4>
 	      <p class="description">
@@ -91,7 +91,7 @@
         </p>
 	  </a>
 	  <a class = "card" style="border: none;">      
-	    <img class="cover" style="display: none;">
+	    <img style="width: 100%; height: auto; display: none;">
 	    <div class="container" style="display: none;">
 	      <h4>Coming Soon...</h4>
 	      <p class="description">
