Cleaned up home page design

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		  Java | HttpClient | Java Swing
         </p>
 	  </a>
-	  <a class = "card" style="border: none;">      
+	  <a class = "card" style="box-shadow: none;">      
 	    <img style="width: 100%; height: auto; display: none;">
 	    <div class="container" style="display: none;">
 	      <h4>Coming Soon...</h4>
