--- a/jeffmhsu.com.html
+++ b/jeffmhsu.com.html
@@ -47,7 +47,7 @@
 		Amazon Web Services S3 Bucket and their Route 53 routing service.
 		</p>
 		<p>
-		Check it out on Github <a class="ext-link" href="https://github.com/Jeff-M-Hsu/JeffMHsu.com">here</a>.
+		You can check it out on Github <a class="ext-link" href="https://github.com/Jeff-M-Hsu/JeffMHsu.com">here</a>.
 		</p>
 	  </div>
 	</div>
