Added page for Fix Me A Drink

--- a/fixmeadrink.html
+++ b/fixmeadrink.html
@@ -20,7 +20,7 @@
   <div id="main">
   	<h1 id="projectname">Fix Me A Drink</h1>
     <div class="row">
-	  <img class="hover" id="row1" src="./resources/img/thumbnail/me.jpg">
+	  <img class="hover" id="row1" src="./resources/img/fixmeadrink.png">
 	</div>
 	<div class="row-space"></div>
 	<div class="row">
