--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
 	  </a>
     </div>
     <div class="deck">
+	  <a class = "card" href="./fixmeadrink.html">      
+	    <img style="width: 100%; height: auto;" src="./resources/img/fixmeadrink.png">
+	    <div class="container">
+	      <h4>Fix Me A Drink</h4>
+	      <p class="description">
+			A website that provides cocktail recipes. Users can request cocktail recipes by name, ingredient, or randomly.
+		  </p>
+	    </div>
+	    <p class="tags">
+		  PHP | CSS | AWS EB/EC2
+        </p>
+	  </a>
       <a class = "card" href="./bumblebee.html">
   	    <img style="width: 100%; height: auto;" src="./resources/img/bumblebee.png">
 	    <div class="container">
@@ -64,7 +76,9 @@
 		  Node.js | Discord.io | JScrape
         </p>
 	  </a>
-      <a class = "card" href="./jscrape.html">   
+    </div>
+    <div class="deck">
+	  <a class = "card" href="./jscrape.html">   
 	    <img style="width: 100%; height: auto;" src="./resources/img/jscrape.png">	
 	    <div class="container">
 	      <h4>JScrape</h4>
@@ -76,8 +90,6 @@
 		  Java | HtmlUnit | Java Swing
         </p>
 	  </a>
-    </div>
-    <div class="deck">
       <a class = "card" href="./currencyconverter.html">   
 	    <img style="width: 100%; height: auto;" src="./resources/img/currencyconverter.png">	
 	    <div class="container">
@@ -89,14 +101,6 @@
 	    <p class="tags">
 		  Java | HttpClient | Java Swing
         </p>
-	  </a>
-	  <a class = "card" style="box-shadow: none;">      
-	    <img style="width: 100%; height: auto; display: none;">
-	    <div class="container" style="display: none;">
-	      <h4>Coming Soon...</h4>
-	      <p class="description">
-		  </p>
-	    </div>
 	  </a>
     </div>
 	<div class="row-space"></div>
