Open external links in new tabs

--- a/bumblebee.html
+++ b/bumblebee.html
@@ -44,7 +44,7 @@
 		own product named JScrape.
 		</p>
 		<p>
-		You can check it out on Github <a class="ext-link" href="https://github.com/Jeff-M-Hsu/Bumblebee">here</a>.
+		You can check it out on Github <a class="ext-link" target="_blank" href="https://github.com/Jeff-M-Hsu/Bumblebee">here</a>.
 		</p>
 	  </div>
 	</div>
