--- a/currencyconverter.html
+++ b/currencyconverter.html
@@ -39,7 +39,7 @@
 		practice with Java, Swing, and to learn about HttpClient, which provides a lightweight solution for sending requests to the API.
 		</p>
 		<p>
-		You can check it out on Github <a class"ext-link" href="https://github.com/Jeff-M-Hsu/Currency-Converter">here</a>.
+		You can check it out on Github <a class"ext-link" target="_blank" href="https://github.com/Jeff-M-Hsu/Currency-Converter">here</a>.
 		</p>
 	  </div>
 	</div>
