--- a/fixmeadrink.html
+++ b/fixmeadrink.html
@@ -49,6 +49,9 @@
       to build something like this again, my stack of choice would likely be React, PHP, MySQL or some 
       combination of frameworks based off of those.
       </p>
+	  <p>
+	  You can check out the site <a class="ext-link" target="_blank" href="http://tinyurl.com/fixmeadrink">here</a>.
+	  </p>
 	  </div>
 	</div>
 	<div class="row-space"></div>
