--- a/honeycombguild.html
+++ b/honeycombguild.html
@@ -56,7 +56,7 @@
 		the responsive layout.
 		</p>
 		<p>
-		You can check out the site <a class="ext-link" href="http://tinyurl.com/honeycombguild">here</a>.
+		You can check out the site <a class="ext-link" target="_blank" href="http://tinyurl.com/honeycombguild">here</a>.
 		</p>
 	  </div>
 	</div>
