--- a/jscrape.html
+++ b/jscrape.html
@@ -41,7 +41,7 @@
 		to use and more accessible on short notice.
 		</p>
 		<p>
-		You can check it out on Github <a class="ext-link" href="https://github.com/Jeff-M-Hsu/JScrape">here</a>.
+		You can check it out on Github <a class="ext-link" target="_blank" href="https://github.com/Jeff-M-Hsu/JScrape">here</a>.
 		</p>
 	  </div>
 	</div>
